fixed vert align

--- a/widgets/categories/categories.scss
+++ b/widgets/categories/categories.scss
@@ -41,6 +41,7 @@ $pure-white: #ffffff;
   table tr td.category-users {
     text-align: left;
     padding: 5px 0;
+    vertical-align: top;
   }
   ol {
     list-style: none;
